# prepare-commit-msg-gen

./: .envrc  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: run-tests.yml
pre_commit_msg_gen/: cli.py
prepare_commit_msg_gen/: __init__.py  cli.py
tests/: test_cli.py
